[package]
name = "hash-brute-force"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
data-encoding = "2.4.0"
num_cpus = "1.16.0"
ring = "0.17.2"
threadpool = "1.8.1"
